[package]
description = "A better alternative to the cat command."
name = "commot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
authors = ["Haider <haideremailsender122@gmail.com>"]
keywords = ["cli", "file viewer", "cli-too", "files", "cat", "file"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"
name = "commot"

[dependencies]
chrono = "0.4.19"
clap = "3.1.8"
colorful = "0.2.1"
derive_more = "0.99.17"
shellexpand = "2.1.0"
term-table = "1.3.2"
thiserror = "1.0.30"
